force-app/main/default/objects/Contact/fields/AccountDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountDocumentNumber__c</fullName>
    <description>Campo para auxiliar no relatório de Histórico do Contato - Bloco 19 - J125 - Histórico de Alteração Cadastral</description>
    <formula>Account.DocumentNumber__c</formula>
    <label>Número do Documento</label>
    <type>Text</type>
</CustomField>