force-app/main/default/objects/Contact/fields/AccountDocumentType__c.field-meta.xml
<CustomField>
    <fullName>AccountDocumentType__c</fullName>
    <formula>TEXT(Account.DocumentType__c)</formula>
    <label>Tipo do Documento</label>
    <type>Text</type>
</CustomField>