force-app/main/default/objects/Contact/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <description>Este campo armazena o endereço de e-mail principal do dependente.</description>
    <label>Email Dependente</label>
    <type>Email</type>
</CustomField>