force-app/main/default/objects/Contact/fields/DDI__c.field-meta.xml
<CustomField>
    <fullName>DDI__c</fullName>
    <description>Código DDI</description>
    <label>DDI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>