force-app/main/default/objects/Contact/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <description>Definição do grau de instrução</description>
    <label>Grau de Instrução</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Education</valueSetName>
    </valueSet>
</CustomField>