force-app/main/default/objects/Contact/fields/MailingComplement1__c.field-meta.xml
<CustomField>
    <fullName>MailingComplement1__c</fullName>
    <description>Complemento para endereço principal</description>
    <label>Complemento 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>