force-app/main/default/objects/Contact/fields/MailingComplement2__c.field-meta.xml
<CustomField>
    <fullName>MailingComplement2__c</fullName>
    <description>Complemento para endereço principal</description>
    <label>Complemento 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>