force-app/main/default/objects/Contact/fields/MailingComplement3__c.field-meta.xml
<CustomField>
    <fullName>MailingComplement3__c</fullName>
    <description>Complemento para endereço principal</description>
    <label>Complemento 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>