force-app/main/default/objects/Contact/fields/MailingIBGECode__c.field-meta.xml
<CustomField>
    <fullName>MailingIBGECode__c</fullName>
    <description>Código IBGE para endereço principal</description>
    <label>Código IBGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>