force-app/main/default/objects/Contact/fields/MailingNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>MailingNeighborhood__c</fullName>
    <description>Bairro do endereço principal</description>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>