force-app/main/default/objects/Contact/fields/MailingNumber__c.field-meta.xml
<CustomField>
    <fullName>MailingNumber__c</fullName>
    <description>Número do endereço principal</description>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>