force-app/main/default/objects/Contact/fields/MailingSREAddressId__c.field-meta.xml
<CustomField>
    <fullName>MailingSREAddressId__c</fullName>
    <label>Id do Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>