force-app/main/default/objects/Contact/fields/MainContact__c.field-meta.xml
<CustomField>
    <fullName>MainContact__c</fullName>
    <description>Principal Contact</description>
    <label>Contato Principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>