force-app/main/default/objects/Contact/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <description>Definição do estado civil</description>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MaritalStatus</valueSetName>
    </valueSet>
</CustomField>