force-app/main/default/objects/Contact/fields/MotherName__c.field-meta.xml
<CustomField>
    <fullName>MotherName__c</fullName>
    <description>Nome da mãe</description>
    <label>Nome da Mãe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>