force-app/main/default/objects/Contact/fields/Naturalness__c.field-meta.xml
<CustomField>
    <fullName>Naturalness__c</fullName>
    <label>Naturalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Naturalness</valueSetName>
    </valueSet>
</CustomField>