force-app/main/default/objects/Contact/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>Nome que o cliente informou que gostaria de ser chamado</description>
    <label>Nome Social</label>
    <length>130</length>
    <type>Text</type>
</CustomField>