force-app/main/default/objects/Contact/fields/OtherAddressType__c.field-meta.xml
<CustomField>
    <fullName>OtherAddressType__c</fullName>
    <description>Tipo de logradouro para endereço de correspondência</description>
    <label>Tipo Logradouro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingAddressType</valueSetName>
    </valueSet>
</CustomField>