force-app/main/default/objects/Contact/fields/OtherComplement1__c.field-meta.xml
<CustomField>
    <fullName>OtherComplement1__c</fullName>
    <description>Complemento para endereço de correspondência</description>
    <label>Complemento 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>