force-app/main/default/objects/Contact/fields/OtherComplement2__c.field-meta.xml
<CustomField>
    <fullName>OtherComplement2__c</fullName>
    <description>Complemento para endereço de correspondência</description>
    <label>Complemento 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>