force-app/main/default/objects/Contact/fields/OtherComplement3__c.field-meta.xml
<CustomField>
    <fullName>OtherComplement3__c</fullName>
    <description>Complemento para endereço de correspondência</description>
    <label>Complemento 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>