force-app/main/default/objects/Contact/fields/OtherComplementType1__c.field-meta.xml
<CustomField>
    <fullName>OtherComplementType1__c</fullName>
    <description>Tipo de complemento para endereço de correspondência</description>
    <label>Tipo Complemento 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ComplementType</valueSetName>
    </valueSet>
</CustomField>