force-app/main/default/objects/Contact/fields/OtherEmail__c.field-meta.xml
<CustomField>
    <fullName>OtherEmail__c</fullName>
    <description>Campo utilizado na demanda de GR Cliente para receber um segundo valor de e-mail.</description>
    <label>E-mail Alternativo</label>
    <type>Email</type>
</CustomField>