force-app/main/default/objects/Contact/fields/OtherIBGECode__c.field-meta.xml
<CustomField>
    <fullName>OtherIBGECode__c</fullName>
    <description>Código IBGE para endereço de correspondência</description>
    <label>Código IBGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>