force-app/main/default/objects/Contact/fields/OtherNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>OtherNeighborhood__c</fullName>
    <description>Bairro do endereço de correspondência</description>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>