force-app/main/default/objects/Contact/fields/OtherNumber__c.field-meta.xml
<CustomField>
    <fullName>OtherNumber__c</fullName>
    <description>Número do endereço</description>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>