force-app/main/default/objects/Contact/fields/OtherSREAddressId__c.field-meta.xml
<CustomField>
    <fullName>OtherSREAddressId__c</fullName>
    <label>Id do Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>