force-app/main/default/objects/Contact/fields/Passport_RNE__c.field-meta.xml
<CustomField>
    <fullName>Passport_RNE__c</fullName>
    <label>Passaporte/RNE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>