force-app/main/default/objects/Contact/fields/SocialSecurityNumber__c.field-meta.xml
<CustomField>
    <fullName>SocialSecurityNumber__c</fullName>
    <label>Passaporte/RNE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>