force-app/main/default/objects/Contact/fields/UserIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UserIdentifier__c</fullName>
    <label>Identificador do usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>