force-app/main/default/objects/Contact/fields/whatslly__Last_WhatsApp_Message_Time__c.field-meta.xml
<CustomField>
    <fullName>whatslly__Last_WhatsApp_Message_Time__c</fullName>
    <description>Automatically updated by Whatslly</description>
    <label>Last WhatsApp Message Time</label>
    <type>DateTime</type>
</CustomField>