force-app/main/default/objects/Contact/recordTypes/ConsumerContact.recordType-meta.xml
<RecordType>
    <fullName>ConsumerContact</fullName>
    <active>true</active>
    <description>Tipo de registro para a criação de um contato relacionado ao cliente</description>
    <label>Contato Cliente</label>
</RecordType>