force-app/main/default/objects/Contact/recordTypes/PartnerContact.recordType-meta.xml
<RecordType>
    <fullName>PartnerContact</fullName>
    <active>true</active>
    <description>Tipo de registro para a criação de um contato relacionado a conta parceiro</description>
    <label>Contato Parceiro</label>
</RecordType>